# SMA-Finger-Control

./: .gitignore  README.md  pyproject.toml
src/controller/: control_state.py  controller_GUI.py  finger_MP.py  interface.py  interface_config.json
src/observation/camera/: camera_config.json  check_camera.py  find_camera_indices.py  record_video.py
src/observation/vision/: angle_estimator_video.py  angle_processor.py  config.json  config_color.json  extract_color_img.py
src/pca9685/: pca9685.py
src/runtime/: capture_worker.py  control_worker.py  logger_worker.py  pipeline.py  pipeline_config.json  process_worker.py
src/utils/: config_loader.py  generalfunctions.py
tests/unit/: test_angle_estimator_video.py  test_angle_processor.py
